--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,8 @@
         "twig/extensions": "1.3.0",
         "twig/twig": "1.36.0",
         "box/spout": "2.7.2",
-        "webmozart/assert": "1.3"
+        "webmozart/assert": "1.3",
+        "phpstan/phpstan": "^0.11.1"
     },
     "require-dev": {
         "akeneo/php-coupling-detector": "0.3.*",
@@ -93,8 +94,7 @@
         "sensiolabs/behat-page-object-extension": "2.1.0",
         "squizlabs/php_codesniffer": "2.*",
         "friends-of-behat/symfony-extension": "^2.0",
-        "liuggio/fastest": "1.6.*",
-        "phpstan/phpstan": "^0.10.5"
+        "liuggio/fastest": "1.6.*"
     },
     "suggest": {
         "akeneo/catalogs": "In order to install one of the Akeneo catalogs"
